# bluefin-higher-order

./: README.md  bluefin-higher-order.cabal  cabal.project  flake.nix  hie.yaml
app/: Main.hs
src/: Dynamic1.hs  Dynamic2.hs  Dynamic3.hs  Static.hs  Utils.hs
src/Reader/: Dynamic.hs  Static.hs
